# dataless

./: .gitignore  README.md  demo.ipynb  pixi.toml  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
dataless/: __init__.py  empirical.py  exceptions.py  extrapolate.py  matlab_bridge.py  model.py
tests/: README.md  conftest.py  pytest.ini  test_empirical.py  test_extrapolate.py  test_integration.py  test_model.py  test_pyp_stability.py
