[project]
authors = [{name = "Luc Rocher", email = "luc@rocher.lc"}]
dependencies = []
description = "Add a short description here"
name = "dataless"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
dataless = { path = ".", editable = true }

[tool.pixi.dependencies]
matplotlib = ">=3.9.1,<3.10"
pandas = ">=2.2.2,<2.3"
numpy = ">=2.0.0,<2.1"
pip = ">=24.0,<25"
scipy = ">=1.14.0,<1.15"

[tool.pixi.tasks]
test = "pytest tests/ --cov=dataless --cov-report=xml --cov-report=term"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.test.dependencies]
pytest = ">=8.0.0,<8.1"
pytest-cov = ">=4.1.0,<4.2"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
test-py310 = { features = ["test", "py310"], solve-group = "py310" }
test-py311 = { features = ["test", "py311"], solve-group = "py311" }
test-py312 = { features = ["test", "py312"], solve-group = "py312" }
