[project]
name = "dataless"
version = "0.1.0"
description = "A package for modeling and forecasting the effectiveness of identification techniques at scale"
authors = [{name = "Luc Rocher", email = "luc@rocher.lc"}]
requires-python = ">= 3.10"
dependencies = [
    "matplotlib>=3.9.1,<3.11",
    "pandas>=2.2.2,<2.4",
    "numpy>=2.0.0,<2.4",
    "scipy>=1.14.0,<1.16",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.1",
    "pytest-cov>=4.1.0,<7.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.ruff]
line-length = 120
target-version = "py310"
src = ["dataless", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
